# rp-playground

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
