[package]
edition = "2021"
name = "rp-playground"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
cyw43 = { version = "0.2.0", features = ["defmt"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
panic-probe = "0.3"
static_cell = "2.1"
cortex-m-rt = "0.7.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }

# deactivated features
# cyw43: "firmware-logs"
# embassy-executor: "task-arena-size-98304", "executor-interrupt"
# embassy-rp: "unstable-pac"
# embassy-time: "defmt-timestamp-uptime"
# panic-probe: "print-defmt"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
